# shopmind-recommendation-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  example_nacos_config.yaml  pyproject.toml  start.bat  test_recommendation.py  test_search.py
src/app/: __init__.py  main.py
src/app/api/: __init__.py  recommendation_router.py  search_router.py
src/app/clients/: __init__.py  product_service_client.py  redis_client.py  service_discovery.py  user_service_client.py
src/app/config/: __init__.py  nacos_client.py  settings.py
src/app/decorators/: __init__.py  deprecation_decorator.py
src/app/middleware/: __init__.py  trace_middleware.py
src/app/provider/: __init__.py  embedding_model_provider.py
src/app/schemas/: __init__.py  base.py  page_result_schema.py  product_service_schema.py  recommendation.py  recommendation_schema.py  result_context.py  search_schema.py  user_service_schema.py
src/app/services/: __init__.py  embedding_service.py  recommendation_service.py  search_service.py
src/app/store/: __init__.py  milvus_client.py  product_collection.py
src/app/utils/: __init__.py  ip.py  logger.py  trace_context.py
