[project]
name = "shopmind-recommendation-service"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "dashscope>=1.25.5",
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "nacos-sdk-python>=3.0.2",
    "numpy>=1.26.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pymilvus>=2.6.6",
    "python-dotenv>=1.2.1",
    "redis>=5.0.0",
    "tenacity>=8.2.0",
    "uvicorn[standard]>=0.40.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
